[package]
name = "virtualization-containerization"
version = "0.1.0"
edition = "2021"
authors = ["Virtualization Team"]
description = "虚拟化容器化技术演示项目"
license = "MIT"
repository = "https://github.com/your-org/virtualization-containerization"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 并发
dashmap = "5.0"
parking_lot = "0.12"

# 网络
reqwest = { version = "0.11", features = ["json"] }

# 配置
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# 缓存
redis = { version = "0.23", features = ["tokio-comp"] }

# 监控
prometheus = "0.13"

# 测试
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[bench]]
name = "virtualization_benchmark"
harness = false

[[bench]]
name = "container_benchmark"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false
